--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -49,12 +49,31 @@ output:
 ```
 
 
-# 1. Overview
+# 1. WKCLIMAD Overview
 
-This repository contains R code and Rdata files for working with WKCLIMAD data and responses....
+This repository contains R code and Rdata files for working with WKCLIMAD data and responses. WKCLIMAD is an ICES workshop aimed at exploring how can the short-, medium-, and long-term influences of climate change on aquaculture, fisheries, and ecosystems be accounted for in ICES Advice?
 
-## 1.1. Resources
+The workshop is chaired by: Mark Dickey-Collas, Kirstin Kari Holsman, and Michael Rust.
+
+## Summary:
+As managers, policy-makers, and other stakeholders become increasingly aware of the need to consider climate impacts, this workshop will develop a proposal for an operational climate-aware advisory framework. Experts are invited to join WKCLIMAD to review the recent and emergent analyses of key climate hazards to aquaculture, fisheries, and ecosystems.
+
+The workshop will outline actionable strategies and approaches that can be taken to promote resiliency in fisheries, aquaculture, and ecosystems. It will scope the next steps for an operational approach, expanding the relevant aspects of climate change that impact management decisions in fisheries, aquaculture and ecosystems.
+
+The kick off meeting will take place on the 21 June 2021, and participants will work via correspondence prior to the online meetings taking place 29–30 September and 18–20 October 2021.
+
+Registration is now closed. Selected participants will be announced by 15 June 2021​.
+
+We expect this to be a popular workshop and therefore may have to limit the number of participants. If the workshop is oversubscribed, ICES reserves the right, in consultation with the workshop chairs, to select the final workshop participants based on their expertise, and equitable makeup of the workshop.​
 
 
+
+
+```{r makeReadME, echo=FALSE,eval=F, include =F}
+
+ # copy and paste this into R window (won't work within markdown)
+ rmd2md(rmd_fl = "WKCLIMAD_getStarted",md_fl = "README")
+
+```
 
 
