--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -49,7 +49,7 @@ output:
 
 # 1. WKCLIMAD Overview
 
-This repository contains R code and Rdata files for working with WKCLIMAD data and responses. WKCLIMAD is an ICES workshop aimed at exploring how can the short-, medium-, and long-term influences of climate change on aquaculture, fisheries, and ecosystems be accounted for in ICES Advice?
+This repository contains R code and Rdata files for working with WKCLIMAD data and responses. WKCLIMAD is an ICES workshop aimed at exploring how can the short-, medium-, and long-term influences of climate change on aquaculture, fisheries, and ecosystems be accounted for in ICES Advice.
 
 The workshop is chaired by: Mark Dickey-Collas, Kirstin Kari Holsman, and Michael Rust. More information can be found here:https://www.ices.dk/community/groups/Pages/WKCLIMAD.aspx
 
