--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -32,18 +32,7 @@ output:
  knitr::opts_chunk$set(echo = T, fig.align="center")
  thisYr <- format(Sys.time(), "%Y")
  today  <- format(Sys.time(), "%b %d, %Y")
- 
-     # --------------------------------------
-    # SETUP WORKSPACE
-
-    tmstp  <- format(Sys.time(), "%Y_%m_%d")
-   # loads packages, data, setup, etc.
-    suppressWarnings(source("R/make.R"))
-    
-    # --------------------------------------
-    
-   
- 
+ tmstp  <- format(Sys.time(), "%Y_%m_%d")
 ```
 
 
@@ -67,7 +56,76 @@ We expect this to be a popular workshop and therefore may have to limit the numb
 
 # 2. Code overview
 
-In August 2021 multiple experts provided a rapid assessment of climate impacts via a Delphi approach. The code below analyses the output from that activity and produces the plots and results summarized in the WKCLIMAD report.
+In August 2021 multiple experts provided a rapid assessment of climate impacts via a Delphi approach. The code below analyses the output from that activity and produces the plots and results summarized in the WKCLIMAD report. The code below will generate the following plot:
+
+![Results of the first round of Delphi surveys.](Figs/Fig1.png){width=65%}
+
+```{r plotResults, echo=TRUE, eval=F, include =T}
+ 
+   # loads packages, data, setup, etc.
+    suppressWarnings(source("R/make.R"))
+    
+    # reshape the data into long-format:
+    # --------------------------------------
+    long_a <- getData(aqua_dat)
+    long_f <- getData(fish_dat)
+    long_a$focus <- "aquaculture"
+    long_f$focus <- "fisheries"
+    
+    # combine into single long format:
+    long <- rbind(long_a,long_f)
+    
+    # summarize across participants:
+    smry <- long%>%group_by(focus,category,time_period,type)%>%summarise(
+      mn = mean(value.x,na.rm=T),
+      sd = sd (value.x,na.rm=T),
+      n  = length(value.x),
+      median = median(value.x,na.rm=T),
+      mn_conf = mean(conf_n,na.rm=T),
+      sd_conf = sd(conf_n,na.rm=T),
+      median_conf = median(conf_n,na.rm=T))
+    smry$type <- factor(smry$type)
+    
+    # split mag and likelihood into columns:
+    smry_w    <- tidyr::spread(smry%>%
+                                 select(focus,time_period,category,type, mn), 
+                               key = type, value = mn)
+    smry_conf <- tidyr::spread(smry%>%
+                                 select(focus,time_period,category,type, mn_conf), 
+                               key = type, value = mn_conf)
+    smry_conf$mnConf <- apply(smry_conf[,c("likelihood","magnitude")],1,mean)
+    
+    smry_w <- merge(smry_w, smry_conf%>%
+                      select(focus,time_period,category, mnConf),
+                    by=c("focus","time_period","category"))
+
+   p <-  ggplot()+geom_point(data=smry_w,aes(x     = magnitude,
+                                             y     = likelihood,
+                                             color = mnConf,
+                                             shape = focus))+
+      scale_color_viridis_c()+
+      facet_grid(focus~time_period)+theme_minimal()
+     
+    # geom_text(data=smry_w,aes(x=magnitude,y=likelihood,color=mnConf,shape=focus)
+    sclr <-.75
+    png("Figs/Fig1.png", width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
+    print(p)
+    dev.off()
+    
+  p2 <- ggplot()+geom_point(data=smry_w,
+                            aes(x=magnitude,y=likelihood,color=mnConf,shape=focus))+
+      scale_color_viridis_c()+
+      facet_wrap(focus~category)+theme_minimal()
+       
+    png("Figs/Fig2.png", width = 8, height =8, units = "in",res = 350)
+    print(p2)
+    dev.off()
+   
+    datIN      <- aqua_dat
+   # add type (and range)
+ 
+```
+
 
 
 ```{r makeReadME, echo=FALSE,eval=F, include =F}
