--- a/WKCLIMAD_getStarted.Rmd
+++ b/WKCLIMAD_getStarted.Rmd
@@ -92,12 +92,19 @@ To generate the plots above run the following code in R (be sure your workspace 
       mn_conf = mean(conf_n,na.rm=T),
       sd_conf = sd(conf_n,na.rm=T),
       median_conf = median(conf_n,na.rm=T))
+    smry<-smry%>%mutate(se = sd/sqrt(n))
     smry$type <- factor(smry$type)
     
     # split mag and likelihood into columns:
     smry_w    <- tidyr::spread(smry%>%
                                  select(focus,time_period,category,type, mn), 
                                key = type, value = mn)
+    smry_wse    <- tidyr::spread(smry%>%
+                                 select(focus,time_period,category,type, se), 
+                               key = type, value = se)
+    smry_wse    <- smry_wse%>%rename(likelihoodSE=likelihood,magnitudeSE=magnitude)
+    smry_w <- merge(smry_w,smry_wse,
+                    by=c("focus","time_period","category"))
     smry_conf <- tidyr::spread(smry%>%
                                  select(focus,time_period,category,type, mn_conf), 
                                key = type, value = mn_conf)
@@ -106,36 +113,178 @@ To generate the plots above run the following code in R (be sure your workspace 
     smry_w <- merge(smry_w, smry_conf%>%
                       select(focus,time_period,category, mnConf),
                     by=c("focus","time_period","category"))
+   
+    smry_w$category <- gsub("Change in ", "", smry_w$category)
+    smry_w$category <- gsub("Changes in ", "", smry_w$category)
+    smry_w$category <- gsub("Changes to ", "", smry_w$category)
     smry_w$cat_wrap <- stringr::str_wrap(smry_w$category, width=30)
+    mult<-1.95
+    smry_w$ylower <- smry_w$likelihood-mult*smry_w$likelihoodSE
+    smry_w$yupper <- smry_w$likelihood+mult*smry_w$likelihoodSE
+    smry_w$xlower <- smry_w$magnitude-mult*smry_w$magnitudeSE
+    smry_w$xupper <- smry_w$magnitude+mult*smry_w$magnitudeSE
   
+    
+    smry_w$confidence   <- smry_w$mnConf
+    smry_w$uncertainty  <- smry_w$mnConf^-1
+    smry_w$focus        <- factor(smry_w$focus,levels=c("fisheries","aquaculture"))
+    aqua <- smry_w%>%filter(focus=="aquaculture")
+    fish <- smry_w%>%filter(focus=="fisheries")
+    
+    
+  # now make some plots:
+    
+    #all points together
    p <-  ggplot()+geom_point(data=smry_w,aes(x     = magnitude,
                                              y     = likelihood,
-                                             color = mnConf,
+                                             color = confidence,
                                              shape = focus))+
       scale_color_viridis_c()+
       facet_grid(focus~time_period)+theme_minimal()
      
+    sclr <-.75
+    png("Figs/Fig1_all_byTimeFrame.png", width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
+    print(p)
+    dev.off()
+   
+    # all points together for fisheries
+    p_fish<-  ggplot()+geom_point(data=smry_w%>%filter(focus=="fisheries"),
+                                   aes(x     = magnitude,
+                                             y     = likelihood,
+                                             color = confidence),shape=16)+
+      scale_color_viridis_c()+
+      facet_grid(focus~time_period)+theme_minimal()
+    
+    p_aqua <-  ggplot()+geom_point(data=smry_w%>%filter(focus=="aquaculture"),
+                                   aes(x     = magnitude,
+                                             y     = likelihood,
+                                             color = confidence),shape=17)+
+      scale_color_viridis_c()+
+      facet_grid(focus~time_period)+theme_minimal()
+    
+    
+    # Now the top set for each focus:
+    #-------------------------------------------------
+    sub <- smry_w%>%filter(focus=="aquaculture",time_period=="long-term")
+    cc <- which(sub$likelihood>quantile(sub$likelihood)[4]&sub$magnitude>quantile(sub$magnitude)[4])
+    highest_aqua <- aqua[which(aqua$category%in%sub[cc,]$category),]
+    
+    sub  <- smry_w%>%filter(focus=="fisheries",time_period=="long-term")
+    cc   <- which(sub$likelihood>quantile(sub$likelihood)[4]&sub$magnitude>quantile(sub$magnitude)[4])
+    highest_fish <- fish[which(fish$category%in%sub[cc,]$category),]
+
+    p_top_fish <- ggplot()+geom_point(data=highest_fish,
+                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+    
+    sclr <-1
+    png("Figs/top_fish.png", width = 6*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_top_fish)
+    dev.off()
+    
+    p_top_aqua <- ggplot()+geom_point(data=highest_aqua,
+                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+
+    png("Figs/top_aqua.png", width = 4.5*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_top_aqua)
+    dev.off()
+      
+  
+    # now plot the top five most variable (based on SE)
+    #-------------------------------------------------
+    sub <- aqua #%>%filter(time_period=="long-term")
+    cc  <- which(sub$likelihoodSE>quantile(sub$likelihoodSE)[4]&sub$magnitudeSE>quantile(sub$magnitudeSE)[4])
+    highest_aquaSE <- aqua[which(aqua$category%in%sub[cc,]$category),]
+    
+    sub  <- fish#%>%filter(time_period=="long-term")
+    cc   <- which(sub$likelihoodSE>quantile(sub$likelihoodSE)[4]&sub$magnitudeSE>quantile(sub$magnitudeSE)[4])
+    highest_fishSE <- fish[which(fish$category%in%sub[cc,]$category),]
+    
+    # plot the top set of fisheries 
+    p_top_fishSE <- ggplot(data=highest_fishSE)+
+      geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+      geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
+      geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+    
+    sclr <-1
+    png("Figs/top_fish_var.png", width = 6*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_top_fishSE)
+    dev.off()
+    
+     # plot the top set of aquaculture 
+    p_top_aquaSE <- ggplot(data=highest_aquaSE)+
+      geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+      geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
+      geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap,nrow=2)+theme_minimal()+ theme(strip.text = element_text(size = 5))+
+      xlim(0, 10) +ylim(0,10)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+
+    png("Figs/top_aqua_var.png", width = 7*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_top_aquaSE)
+    dev.off()
+      
+      
+      
+    # p_aqua_txt <- p_aqua + geom_text(data=sub,aes(x = magnitude,
+    #                                          y     = likelihood,
+    #                                          label = cat_wrap,
+    #                                          color = confidence))
     # geom_text(data=smry_w,aes(x=magnitude,y=likelihood,color=mnConf,shape=focus)
     sclr <-.75
-    png("Figs/Fig1.png", width = 8*sclr, height = 4.5*sclr, units = "in",res = 350)
-    print(p)
+    png("Figs/Fig1a_aqua_byTimeFrame.png", width = 8*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_aqua)
+    dev.off()
+    png("Figs/Fig1b_fish_byTimeFrame.png", width = 8*sclr, height = 3*sclr, units = "in",res = 350)
+    print(p_fish)
     dev.off()
     
     p2_aqua <- ggplot()+geom_point(data=smry_w%>%filter(focus=="aquaculture"),
-                            aes(x=magnitude,y=likelihood,color=mnConf,shape=focus))+
+                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
       scale_color_viridis_c()+
       facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
        
-    png("Figs/Fig2.png", width = 8, height =8, units = "in",res = 350)
+    png("Figs/plot_all_aqua.png", width = 8, height =8, units = "in",res = 350)
     print(p2_aqua)
     dev.off()
     
     p2_fish <- ggplot()+geom_point(data=smry_w%>%filter(focus=="fisheries"),
-                            aes(x=magnitude,y=likelihood,color=mnConf,shape=focus))+
+                            aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
       scale_color_viridis_c()+
       facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
-    png("Figs/Fig3.png", width = 8, height =8, units = "in",res = 350)
+    png("Figs/plot_all_fish.png", width = 8, height =8, units = "in",res = 350)
     print(p2_fish)
+    dev.off()
+
+   
+     #same plot with confidence as size of "+"
+     p2_fish_SD<- ggplot(data=smry_w%>%filter(focus=="fisheries"))+
+       geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+        geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
+       geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
+    png("Figs/plot_all_fish_SE.png", width = 8, height =8, units = "in",res = 350)
+    print(p2_fish_SD)
+    dev.off()
+    
+    #same plot with confidence as size of "+"
+     p2_aqua_SD<- ggplot(data=smry_w%>%filter(focus=="aquaculture"))+
+       geom_point(aes(x=magnitude,y=likelihood,color=confidence,shape=time_period))+
+        geom_linerange(aes(x=magnitude,y=likelihood,color=confidence,ymin = ylower, ymax = yupper))+
+       geom_errorbarh(aes(x=magnitude,y=likelihood,color=confidence,xmin = xlower,xmax = xupper))+
+      scale_color_viridis_c()+
+      facet_wrap(.~cat_wrap)+theme_minimal()+ theme(strip.text = element_text(size = 5))
+    png("Figs/plot_all_aqua_SE.png", width = 8, height =8, units = "in",res = 350)
+    print(p2_aqua_SD)
     dev.off()
     
     write.csv(file="Data/out/aquaculture_cats.csv",
@@ -143,7 +292,8 @@ To generate the plots above run the following code in R (be sure your workspace 
     write.csv(file="Data/out/fishery_cats.csv",
               unique(smry_w%>%filter(focus=="fisheries")%>%select(category)))
    
-   
+   write.csv(file="Data/out/fishery.csv",fish)
+   write.csv(file="Data/out/aquaculture.csv",aqua)
    # add type (and range)
  
 ```
